@@ -47,11 +47,14 @@ public class InventoryListener implements Listener {
                         default:
                             return;
                     }
-                    /*
-                    case BIND_ON_CLICK:
-                    ItemUtils.soulbindItem(player, itemStack);
-                    return;
-                    */
+                case BIND_ON_PICKUP:
+                    switch (slotType) {
+                        case CONTAINER:
+                            ItemUtils.soulbindItem(player, itemStack);
+                            return;
+                        default:
+                            return;
+                    }
                 default:
                     break;
             }
